# hse-se-csa

./: .gitignore  ComparativeAnalysis.md  README.md
Task_1/: CMakeLists.txt  README.md  main.cpp  run-tests.sh
Task_1/include/libfilm/: cartoon.hpp  container.hpp  documentary.hpp  errors.hpp  fiction.hpp  film.hpp
Task_1/src/: CMakeLists.txt  cartoon.cpp  container.cpp  documentary.cpp  fiction.cpp  film.cpp
Task_1/tests/: report.txt
Task_1/tests/data/: answer_001.txt  answer_003.txt  test_001.txt
Task_2/: CMakeLists.txt  CMakePresets.json  README.md  film_generator.cpp  film_generator.hpp  main.cpp  run-tests.sh
Task_2/include/libfilm/: cartoon.hpp  container.hpp  documentary.hpp  fiction.hpp  film.hpp
Task_2/src/: CMakeLists.txt  cartoon.cpp  container.cpp  documentary.cpp  fiction.cpp  film.cpp  film_reader.cpp  film_reader.hpp
Task_2/tests/: report.txt
Task_2/tests/data/: test_random_008.txt  test_random_009.txt
Task_3/: README.md  main.py  run-tests.sh
Task_3/libfilm/: cartoon.py  container.py  documentary.py  fiction.py  film.py  film_generator.py  film_printer.py  film_reader.py
Task_3/tests/: report.txt
Task_3/tests/data/: test_002.txt  test_003.txt  test_011.txt  test_random_005.txt  test_random_012.txt
Task_5/: CMakeLists.txt  README.md
Task_5/src/: CMakeLists.txt  command_line_options.cpp  command_line_options.hpp  main.cpp
Task_5/src/generator/: generate_books_distribution.cpp  generate_books_distribution.hpp
Task_5/src/thread_pool/: thread_pool.hpp
